I added the icons to the nav btns. I corrected the alignment of the text. I tried to use useState have the btn background change from gradient to white and vise versa when clicked but There's something not connected. I'll need to figure that out but the nav looks the way I want it to so this is a win!

--- a/taskflow-app/src/CSS/Navigation.css
+++ b/taskflow-app/src/CSS/Navigation.css
@@ -18,10 +18,20 @@
 }
 
 .calendar, .kanban, .project, .time-tracking {
+    display: flex;
+    align-items: center;
     height: 35px;
     border-radius: 10px;
     border: none;
     text-align: left;
     font-family: 'Inter';
     font-weight: 500;
+    font-size: 18px;
+    padding-bottom: 8px;
+}
+
+.today-icon, .tab-icon, .folder_filled-icon, .alarm-icon {
+    margin-right: 5px;
+    width: 23px;
+    height: 23px;
 }
